--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
+  "engines": {
+    "node": "12.18.4"
+  },
   "dependencies": {
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
